# cpp-auth-resource-server

./: .dockerignore  .env.production.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  auth.lua  docker-compose.yml  ecs-task-definition.json  nginx.conf
.github/workflows/: ci.yml
db/: schema.sql
deploy/aws/: s3-cors.production.json  s3-cors.testing.json
deploy/minio/: cors.xml
docker/: Dockerfile  docker-compose.yml
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/resources/: page.tsx
frontend/src/app/resources/[id]/: page.tsx
frontend/src/app/resources/new/: page.tsx
frontend/src/app/resources/upload/: page.tsx
frontend/src/features/auth/: api.ts  authStore.ts
frontend/src/features/auth/components/: LoginForm.tsx  RegisterForm.tsx
frontend/src/features/files/: api.ts  types.ts
frontend/src/features/files/components/: FileDownloadButton.tsx  FileUploadPanel.tsx  UploadFilePage.tsx
frontend/src/features/resources/: api.ts  types.ts
frontend/src/features/resources/components/: CreateResourcePage.tsx  ResourceDetail.tsx  ResourceForm.tsx  ResourceList.tsx
frontend/src/shared/api/: client.ts
frontend/tests/features/auth/: authStore.test.ts
frontend/tests/features/resources/: api.test.ts
frontend/tests/features/resources/components/: ResourceForm.test.tsx
frontend/tests/shared/api/: client.test.ts
scripts/: run_unit_tests.sh
src/: main.cpp
src/cache/: redis_client.cpp  redis_client.h
src/dao/: dao_util.h  resource_dao.cpp  resource_dao.h  user_dao.cpp  user_dao.h
src/db/: connection_pool.cpp  connection_pool.h
src/network/: http_conn.cpp  http_conn.h
src/service/: resource_service.cpp  resource_service.h  storage_service.cpp  storage_service.h  user_service.cpp  user_service.h
src/thread/: locker.h  threadpool.h
src/utils/: auth_utils.h  env_utils.h  jwt_utils.cpp  jwt_utils.h  logger.cpp
tests/: api_tests.py  unit_tests.cpp
workspace/project/: auth_utils.h  connection_pool.cpp  connection_pool.h  http_conn.cpp  http_conn.h  locker.h  logger.cpp  main.cpp  redis_client.cpp  resource_dao.cpp  resource_dao.h  resource_service.cpp  resource_service.h  threadpool.h  user_dao.cpp  user_dao.h  user_service.cpp  user_service.h
workspace/project/cache/: redis_client.h
workspace/project/db/: connection_pool.cpp
workspace/project/network/: http_conn.cpp  http_conn.h
workspace/project/utils/: logger.h
